# shared-formula

./: CHANGELOG.md  shared-formula.cabal
bench/: Main.hs
src/Data/Formula/NAry/: Shared.hs
src/Data/SimplifiedFormula/: Agent.hs
src/Data/SimplifiedFormula/Agents/: And.hs  And.hs-boot  Children.hs  Children.hs-boot  Null.hs  Nullary.hs  Out.hs  Out.hs-boot  ShareSet.hs  ShareSet.hs-boot  SingleParent.hs  SingleParent.hs-boot  Singleton.hs  Swallow.hs  Swallow.hs-boot
src/Data/SimplifiedFormula/Utils/: Fold.hs  HashSet.hs  IdMap.hs  IntSet.hs
test/: Main.hs
