cabal-version:      2.4
name:               shared-formula
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Pavol Vargovcik
maintainer:         pavol.vargovcik@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Data.Formula.NAry.Shared

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      base ^>=4.14.3.0,
      unordered-containers ^>=0.2.18.0,
      vector ^>=0.12.3.1,
      vector-instances ^>=3.4,
      hashable ^>=1.4.0.2,
      containers ^>=0.6.5.1,
      composition-extra ^>=2.0.0,
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    sydtest ^>=0.10.0.0,
    base,
    containers,
    shared-formula,
